--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,14 +9,6 @@
   z-index: 10;
 }
 
-/* Viewport-level hue cycle */
-.viewport {
-  filter:
-    hue-rotate(var(--hue-rotate, 0deg))
-    saturate(var(--saturate, 1))
-    contrast(var(--contrast, 1))
-    brightness(var(--brightness, 1));
-}
 
 .artwork {
   position: relative;
